# dash-lang

./: CONTRIBUTING.md  Cargo.toml  README.md  Roadmap.md  TODO.md  dash.pest
examples/: function.dash  hello.dash  ifelse.dash  loop.dash  math.dash  return.dash
src/: ast.rs  eval.rs  lib.rs  main.rs  parser.rs
tests/: run.rs
