[package]
name = "dash-lang"
version = "0.2.0"
edition = "2021"
authors = ["Pjdur"]
documentation = "https://docs.rs/dash-lang"
description = "A simple interpreted language"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pjdur/dash-lang"

[[bin]]
name = "dash"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
